crates/math-core/tests/snapshots/conversion_test__mathrm_nested2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm{\\mathit{a}b}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mrow><mspace/><mi mathvariant="normal">b</mi></mrow>
    </mrow>
</math>
