crates/math-core/tests/snapshots/conversion_test__mathrm_nested3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm{ab\\mathit{cd}ef}"
---
<math>
    <mrow>
        <mpadded><mi>ab</mi></mpadded>
        <mpadded><mi>𝑐𝑑</mi></mpadded>
        <mpadded><mi>ef</mi></mpadded>
    </mrow>
</math>
