crates/math-core/tests/snapshots/conversion_test__mathrm_nested4.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathit{\\mathrm{a}}"
---
<math>
    <mpadded><mi mathvariant="normal">a</mi></mpadded>
</math>
