crates/math-core/tests/snapshots/conversion_test__mathrm_no_brackets.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm x"
---
<math>
    <mrow><mspace/><mi mathvariant="normal">x</mi></mrow>
</math>
