crates/math-core/tests/snapshots/conversion_test__mathrm_with_sin.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm{x\\sin}"
---
<math>
    <mrow>
        <mrow><mspace/><mi mathvariant="normal">x</mi></mrow>
        <mspace width="0.1667em"/>
        <mrow><mspace/><mi>sin</mi></mrow>
    </mrow>
</math>
