crates/math-core/tests/snapshots/conversion_test__mathrm_with_sin2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm{\\sin x}"
---
<math>
    <mrow>
        <mrow><mspace/><mi>sin</mi></mrow>
        <mo lspace="0.1667em">&ApplyFunction;</mo>
        <mrow><mspace/><mi mathvariant="normal">x</mi></mrow>
    </mrow>
</math>
