crates/math-core/tests/snapshots/conversion_test__mathrm_with_superscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathrm{x}^2"
---
<math>
    <msup>
        <mrow><mspace/><mi mathvariant="normal">x</mi></mrow>
        <mn>2</mn>
    </msup>
</math>
