crates/math-core/tests/snapshots/conversion_test__mathstrut.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathstrut"
---
<math>
    <mpadded width="0">
        <mphantom>
            <mo stretchy="false">(</mo>
        </mphantom>
    </mpadded>
</math>
