crates/math-core/tests/snapshots/conversion_test__mathtt.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathtt{x}"
---
<math>
    <mi>𝚡</mi>
</math>
