crates/math-core/tests/snapshots/conversion_test__mathtt_with_digit.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\mathtt2"
---
<math>
    <mi>𝟸</mi>
</math>
